fix scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,14 +27,32 @@ a {
 
 body {
     margin: 0;
-    min-height: 100vh;
-    padding-inline: 120px;
+    min-height: 100%;
     font-size: 14px;
-    padding-bottom: 10px;
 }
 
 .css-v0pjtz-MuiStack-root {
     padding: 0 !important;
 }
 
+.content {
+    padding-inline: 120px;
+    padding-bottom: 10px;
+}
+
+::-webkit-scrollbar {
+    width: 14px;
+}
+
+::-webkit-scrollbar-track {
+    background: #EEEEEE;
+    border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+    border: 3px solid #EEEEEE;
+    background-clip: padding-box;
+    border-radius: 100px;
+    background: #BDBDBD;
+}
 
